fix: use existing dark mode variable for network badge

--- a/src/styles/_paths.scss
+++ b/src/styles/_paths.scss
@@ -170,7 +170,7 @@
   &:hover { text-decoration: underline; }
 
   @include dark-mode {
-    background: $color-tag-bg-dark;
+    background: $color-card-bg-dark;
     color: $color-text-dark;
   }
 }
